# Commander

./: .gitignore  .mailmap  CHANGELOG.md  CMakeLists.txt  Changelog.txt  FIRAS_exercise.ipynb  Makefile  README.md  install_ita.sh  install_notur.sh  install_owls.sh  install_saga.sh  make_comm.sh  param.txt  param_AST9240_2023.txt  param_BP10_final_v2.txt  params.ini  prerequisites.json  run.sh  run_70_nside64_mask50.sh  run_70_with_mask_10.sh  run_commander.sh  run_isotropic.sh  setup.py
cmake/: .doxygen.cmake.swo  FindCFITSIO.cmake  FindFFTW.cmake  FindHEALPIX.cmake  FindSHARP2.cmake  blas.cmake  camb.cmake  cfitsio.cmake  commander3.cmake  curl.cmake  doxygen.cmake  fftw.cmake  functions.cmake  hdf5.cmake  healpix.cmake  intel.cmake  libaec.cmake  libraries.cmake  libssh2.cmake  main.cmake  mbedtls.cmake  mpi.cmake  openmp.cmake  project_instructions.cmake  project_toolchains.cmake  project_variables.cmake  required_libraries.cmake  sharp2.cmake  sources.cmake  summary.cmake  tempita.cmake  toolchains.cmake  variables.cmake  zlib.cmake
cmake/compilers/: flang_options.txt  gnu.cmake  ifort_options.txt  intel.cmake  llvm.cmake  nvhpc.cmake
cmake/deprecated/: blas.cmake  cfitsio.cmake  cfitsio_cmake.cmake  curl.cmake  curl_cmake.cmake  curl_v2.cmake  fftw.cmake  fftw_cmake.cmake  hdf5.cmake  hdf5_cmake.cmake  healpix.cmake  sharp2.cmake
cmake/modules/: FindSHARP2.cmake
cmake/projects/: blas.cmake  camb.cmake  cfitsio.cmake  commander3.cmake  curl.cmake  fftw.cmake  hdf5.cmake  healpix.cmake  libaec.cmake  libssh2.cmake  mbedtls.cmake  zlib.cmake
commander1/: #commander.f90#  INSTALL  Makefile
commander1/config/: config.abel  config.abel_gfortran  config.ent  config.example  config.gnu_daniel  config.hke_laptop  config.hke_laptop~  config.ita_intel  config.ita_linux  config.ita_owl  config.titan
commander1/src/comm_process_resfiles/: .#cl    Makefile  comm_br_mod.f90  comm_br_mod.mod  comm_br_old_mod.f90  comm_br_old_mod.mod  comm_gauss_br_mod.f90  comm_gauss_br_mod.mod  comm_like.f90  comm_like_model_mod.f90  comm_like_model_mod.mod  (+15 more)
commander3/camb/: comm_camb_mod.f90
commander3/config/: config.abel  config.ahj  config.generic_gcc  config.ita_autoowl  config.ita_cmake_gnu  config.ita_cmake_intel  config.ita_intel  config.ita_internal  config.ita_maksym  config.ita_maksymb  config.ita_oneapi  config.ita_oneapi_autoowl  config.ita_owl  config.maksymb  config.skn_owl_gnu
commander3/messcomm/: messcomm.f90
commander3/parameter_files/: maksymb_intel_process.sh  param_AST9240.txt  param_AST9240_planck2015_1deg.txt  param_BP10.0.txt  param_BP10_final_v1.txt  param_BP10_final_v2.txt  param_BP8.0.txt  param_BP8.0_simulations.txt  param_BP8.1_v1.txt  param_BP9.0.txt  param_BP9.1.txt  param_BP9.2.txt  param_BP_v3.00_full.txt  param_BP_v5.00_full.txt  param_BP_v6.00_Cl_resamp.txt  param_BP_v6.00_full.txt  param_BP_v7.00_full.txt  param_BP_v8.00_full.txt  param_CG_DR1.txt  param_HFI_test.txt  param_camb_old.txt  param_camb_sim.txt  param_camb_sim_70_with_mask_10.txt  param_camb_sim_isotropic_nomask.txt  param_camb_sim_nside64_mask50.txt  param_litebird_sim_master.txt  param_stable.txt  run_comm3_AST9240  stable_intel_process.sh
commander3/python/: __main__.py  downloader.py  tempita_proc.py
commander3/src/: ARS_mod.f90  CMakeLists.txt  InvSamp_mod.f90  Makefile  ars_mod.f90  backup.f90  comm_4D_map_mod.f90  comm_4d_map_mod.f90  comm_B_bl_mod.f90  comm_B_mod.f90  comm_Cl_mod.f90  comm_F_int_0D_mod.f90  comm_F_int_2D_mod.f90  comm_F_int_mod.f90  comm_F_line_mod.f90  comm_F_mod.f90  comm_MBB_comp_mod.f90  comm_N_QUcov_mod.f90  comm_N_rms_mod.f90  comm_ame_lognormal_mod.f90  comm_b_bl_mod.f90  comm_b_firas_mod.f90  comm_b_mod.f90  comm_beam_mod.f90  comm_bp_mod.f90  comm_bp_utils.f90  comm_brand_new_comp_mod.f90  comm_camb_eval_mod.f90  comm_camb_mod.f90  comm_chisq_mod.f90  comm_cl_mod.f90  comm_cmb_comp_mod.f90  comm_cmb_relquad_comp_mod.f90  comm_comp_interface_mod.f90  comm_comp_mod.f90  comm_conviqt_mod.f90  comm_cr_mod.f90  comm_cr_precond_mod.f90  comm_cr_utils.f90  comm_crosstalk_mod.f90  (+118 more)
commander3/todscripts/: lfibandpasses.py  lfitohdf5.py  plotAcrossIteration.py
config/: config.hke_laptop  config.hpcports  config.ita_intel  config.ita_owl  config.saga
docs/: .docsifytopdfrc.js  README.md  _coverpage.md  _navbar.md  _sidebar.md  commander.bib  ford.md  index.html
docs/01_quick_start/: index.md
docs/01_user_manual/: README.md
docs/02_parameters/: README.md  index.md
docs/03_file_formats/: README.md  index.md
docs/04_faq/: README.md  index.md
docs/05_bibliography/: index.md
docs/_media/: custom.css  wip.md
docs/deprecated/: Doxyfile
docs/user_manual/: index.md
parameter_files/: param_BP_v6.00_full.txt  param_full.txt  sims.txt
pysetup/: __init__.py  checker.py
python_test/: CHANGES.txt  __main__.py  main.py  prerequisites.json  setup.py
src/camb/: Makefile  Makefile~  cambtest  cambtest.f90  cambtest.f90~  comm_camb_mod.f90~  comm_camb_mod.mod
src/commander/: #comm_diffuse_comp_mod.f90#  #comm_freefree_comp_mod.f90#  .#comm_freefree_comp_mod.f90  ARS_mod.f90  InvSamp_mod.f90  InvSamp_mod.optrpt  Makefile  comm_4D_map_mod.f90  comm_B_bl_mod.f90  comm_B_bl_mod.optrpt  comm_B_mod.f90  comm_B_mod.optrpt  comm_Cl_mod.f90  comm_Cl_mod.optrpt  comm_F_int_0D_mod.f90  comm_F_int_0D_mod.optrpt  comm_F_int_1D_mod.f90  comm_F_int_1D_mod.optrpt  comm_F_int_2D_mod.f90  comm_F_int_2D_mod.optrpt  comm_F_int_mod.f90  comm_F_int_mod.optrpt  comm_F_line_mod.f90  comm_F_line_mod.optrpt  comm_F_mod.f90  comm_MBB_comp_mod.f90  comm_MBB_comp_mod.optrpt  comm_N_QUcov_mod.f90  comm_N_mod.f90  comm_N_mod.optrpt  comm_N_rms_mod.f90  comm_N_rms_mod.optrpt  comm_b_bl_mod.mod  comm_b_mod.mod  comm_beam_mod.f90  comm_beam_mod.mod  comm_beam_mod.optrpt  comm_bp_mod.f90  comm_bp_mod.mod  comm_bp_mod.optrpt  (+148 more)
src/messcomm/: Makefile
src/python/: tempita_proc.py
src/todscripts/: huffman.py  lfibandpasses.py  lfitohdf5.py  plotAcrossIteration.py
tutorial/: Forground-modelling.ipynb  convert_filelist.py  param_tutorial.txt  run_comm3.sh  running_jupyter_notebook.md
(+918 files in other folders)
